--- a/radio/systemd/radio.service
+++ b/radio/systemd/radio.service
@@ -9,7 +9,8 @@ After=syslog.target network.target remote-fs.target autofs.service
 [Service]
 
 Type=simple
-ExecStart=/opt/dave/bin/radio daemon syslog rtp 239.4.1.13:8554
+#ExecStart=/opt/dave/bin/radio daemon syslog rtp 230.4.1.13:8554
+ExecStart=/opt/dave/bin/radio daemon syslog
 
 User=radio
 WorkingDirectory=/home/radio
