--- a/android/radio/AndroidManifest.xml
+++ b/android/radio/AndroidManifest.xml
@@ -6,9 +6,13 @@
   android:versionName="1.0"
   >
 
+  <!-- Android 4.1 (JellyBean) -->
+  <uses-sdk android:minSdkVersion="16" />
+
   <application
     android:label="@string/app_name"
     android:icon="@drawable/ic_launcher"
+    android:name="RadioApplication"
     >
 
     <activity
