--- a/android/radio/ant.properties
+++ b/android/radio/ant.properties
@@ -15,3 +15,5 @@
 #  'key.alias' for the name of the key to use.
 # The password will be asked during the build when you use the 'release' target.
 
+java.source=1.7
+java.target=1.7
