--- a/android/radio/AndroidManifest.xml
+++ b/android/radio/AndroidManifest.xml
@@ -9,6 +9,8 @@
   <!-- Android 4.1 (JellyBean) -->
   <uses-sdk android:minSdkVersion="16" />
 
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
   <application
     android:label="@string/app_name"
     android:icon="@drawable/ic_launcher"
