--- a/android/base/project.properties
+++ b/android/base/project.properties
@@ -10,6 +10,6 @@
 # To enable ProGuard to shrink and obfuscate your code, uncomment this (available properties: sdk.dir, user.home):
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
+android.library=true
 target=android-26
 sdk.buildtools=26.0.1
-android.library.reference.1=../base
