Increase the supported Android API level to 28 (Pie).

--- a/android/base/AndroidManifest.xml
+++ b/android/base/AndroidManifest.xml
@@ -8,4 +8,7 @@
 
   <!-- Android 4.1 (JellyBean) -->
   <uses-sdk android:minSdkVersion="16" />
+
+  <!-- Android 8.0 (Oreo) -->
+  <uses-sdk android:targetSdkVersion="26" />
 </manifest>
