--- a/android/radio/AndroidManifest.xml
+++ b/android/radio/AndroidManifest.xml
@@ -9,6 +9,9 @@
   <!-- Android 4.1 (JellyBean) -->
   <uses-sdk android:minSdkVersion="16" />
 
+  <!-- Android 8.0 (Oreo) -->
+  <uses-sdk android:targetSdkVersion="26" />
+
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
   <application
