--- a/android/radio/AndroidManifest.xml
+++ b/android/radio/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
   <application
     android:label="@string/app_name"
-    android:icon="@drawable/ic_launcher"
+    android:icon="@drawable/radio"
     android:name="RadioApplication"
     >
 
