--- a/android/radio/AndroidManifest.xml
+++ b/android/radio/AndroidManifest.xml
@@ -23,6 +23,7 @@
     <activity
       android:name="MainActivity"
       android:label="@string/app_name"
+      android:launchMode="singleTop"
       >
 
       <intent-filter>
