--- a/android/radio/AndroidManifest.xml
+++ b/android/radio/AndroidManifest.xml
@@ -32,6 +32,14 @@
       </intent-filter>
     </activity>
 
+    <activity
+      android:name="PlayPauseActivity"
+      android:launchMode="singleTask"
+      android:taskAffinity=""
+      android:excludeFromRecents="true"
+      >
+    </activity>
+
     <service
       android:name="RadioService"
       android:label="@string/player_service_label"
