--- a/android/radio/AndroidManifest.xml
+++ b/android/radio/AndroidManifest.xml
@@ -40,6 +40,22 @@
       >
     </activity>
 
+    <activity
+      android:name="NextActivity"
+      android:launchMode="singleTask"
+      android:taskAffinity=""
+      android:excludeFromRecents="true"
+      >
+    </activity>
+
+    <activity
+      android:name="PreviousActivity"
+      android:launchMode="singleTask"
+      android:taskAffinity=""
+      android:excludeFromRecents="true"
+      >
+    </activity>
+
     <service
       android:name="RadioService"
       android:label="@string/player_service_label"
