--- a/android/radio/AndroidManifest.xml
+++ b/android/radio/AndroidManifest.xml
@@ -17,11 +17,11 @@
   <application
     android:label="@string/app_name"
     android:icon="@drawable/radio"
-    android:name="RadioApplication"
+    android:name=".RadioApplication"
     >
 
     <activity
-      android:name="MainActivity"
+      android:name=".MainActivity"
       android:label="@string/app_name"
       >
 
@@ -32,12 +32,14 @@
     </activity>
 
     <receiver
-      android:name="ActionReceiver"
+      android:name=".ActionReceiver"
+      android:exported="false"
      />
 
     <service
-      android:name="RadioService"
+      android:name=".RadioService"
       android:label="@string/player_service_label"
+      android:exported="false"
      />
   </application>
 </manifest>
