--- a/android/radio/AndroidManifest.xml
+++ b/android/radio/AndroidManifest.xml
@@ -38,6 +38,11 @@
      />
 
     <receiver
+      android:name=".PlayerActionReceiver"
+      android:exported="false"
+     />
+
+    <receiver
       android:name=".MediaButtonReceiver"
       >
 
